modules/security/cert-manager/base/resources/workloads/webhook/configs/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: cert-manager-webhook
webhooks:
- name: webhook.cert-manager.io
  rules:
  - apiGroups:
    - cert-manager.io
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - certificaterequests
  admissionReviewVersions:
  - v1
  matchPolicy: Equivalent
  timeoutSeconds: 30
  failurePolicy: Fail
  sideEffects: None
  clientConfig:
    service:
      name: cert-manager-webhook
      namespace: default
      path: /mutate
