modules/security/cert-manager/base/resources/workloads/webhook/configs/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cert-manager-webhook
webhooks:
- name: webhook.cert-manager.io
  namespaceSelector:
    matchExpressions:
    - key: cert-manager.io/disable-validation
      operator: NotIn
      values:
      - "true"
  rules:
  - apiGroups:
    - cert-manager.io
    - acme.cert-manager.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - "*/*"
  admissionReviewVersions:
  - v1
  matchPolicy: Equivalent
  timeoutSeconds: 30
  failurePolicy: Fail
  sideEffects: None
  clientConfig:
    service:
      name: cert-manager-webhook
      namespace: default
      path: /validate
